--- a/Common/app/src/main/res/values/colors.xml
+++ b/Common/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="mint">#BADFDB</color>
+    <color name="lightYellow">#FCF9EA</color>
+    <color name="lightOrange">#FFC5A1</color>
+    <color name="Orange">#F8A978</color>
+
+
 </resources>
