--- a/Common/app/src/main/res/layout/activity_main.xml
+++ b/Common/app/src/main/res/layout/activity_main.xml
@@ -28,5 +28,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/chatBtn" />
+        app:srcCompat="@drawable/chat_btn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
