플레이리스트

--- a/Common/app/src/main/res/values/colors.xml
+++ b/Common/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="lightYellow">#FCF9EA</color>
     <color name="lightOrange">#FFC5A1</color>
     <color name="Orange">#F8A978</color>
+    <color name="Gray">#90E1E1E1</color>
 
 
 </resources>
