--- a/Common/app/src/main/res/layout/activity_main.xml
+++ b/Common/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,31 @@
     android:background="@color/lightYellow"
     tools:context=".MainActivity" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/chatBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/album" />
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/album" />
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/album" />
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
@@ -22,11 +47,10 @@
         android:id="@+id/chatBtn"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginTop="624dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="19dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/chat_btn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
