--- a/Common/app/src/main/res/layout/activity_my_page.xml
+++ b/Common/app/src/main/res/layout/activity_my_page.xml
@@ -106,8 +106,10 @@
         android:layout_marginTop="40dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/MusicRV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/search_bar"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="30dp"
