--- a/Common/app/src/main/res/layout/activity_my_page.xml
+++ b/Common/app/src/main/res/layout/activity_my_page.xml
@@ -112,7 +112,7 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/search_bar"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="30dp"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="20dp"/>
 
 
