--- a/Common/app/src/main/res/layout/activity_quiz_list.xml
+++ b/Common/app/src/main/res/layout/activity_quiz_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/lightYellow"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".QuizList">
@@ -12,8 +13,8 @@
         android:id="@+id/musicBtn"
         android:layout_width="200dp"
         android:layout_height="60dp"
-        android:background="@drawable/radius"
         android:layout_marginBottom="28dp"
+        android:background="@drawable/radius"
         android:text="음악"
         android:textColor="@color/white"
         android:textSize="23sp"
@@ -23,8 +24,8 @@
         android:id="@+id/movieBtn"
         android:layout_width="200dp"
         android:layout_height="60dp"
-        android:background="@drawable/radius"
         android:layout_marginBottom="28dp"
+        android:background="@drawable/radius"
         android:text="영화, 드라마"
         android:textColor="@color/white"
         android:textSize="23sp"
