--- a/Common/app/src/main/res/layout/activity_quiz_list.xml
+++ b/Common/app/src/main/res/layout/activity_quiz_list.xml
@@ -14,6 +14,7 @@
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:background="@drawable/radius"
+        android:backgroundTint="@color/lightOrange"
         android:layout_marginBottom="28dp"
         android:text="음악"
         android:textColor="@color/white"
