--- a/Common/app/src/main/res/layout/activity_chatting_room.xml
+++ b/Common/app/src/main/res/layout/activity_chatting_room.xml
@@ -9,7 +9,7 @@
     tools:context=".ChattingRoom">
 
     <TextView
-        android:id="@+id/chatting_title"
+        android:id="@+id/chattingroom_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
@@ -25,15 +25,16 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chattingRoomRV"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="530dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="12dp"
         android:layout_marginRight="30dp"
+
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/chatting_title" />
+        app:layout_constraintTop_toBottomOf="@id/chattingroom_title" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/textinput"
