--- a/Common/app/src/main/res/layout/activity_main.xml
+++ b/Common/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,6 @@
     android:background="@color/lightYellow"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/MyPageBtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:background="@drawable/radius"
-        android:backgroundTint="@color/Orange"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="0dp"
@@ -27,10 +16,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/MyPageBtn">
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/quizText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
@@ -40,16 +29,26 @@
             android:textColor="#000000"
             android:textSize="20sp" />
 
-        <ImageView
-            android:id="@+id/imageView5"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview_quiz"
             android:layout_width="305dp"
-            android:layout_height="170dp"
+            android:layout_height="150dp"
             android:layout_gravity="center"
-            android:background="@drawable/radius"
-            app:srcCompat="@drawable/quiz" />
+            android:elevation="6dp"
+            app:cardCornerRadius="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/quizImg"
+                android:layout_width="305dp"
+                android:layout_height="150dp"
+                android:scaleType="fitXY"
+                app:srcCompat="@drawable/quiz" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/genquizText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
@@ -60,19 +59,31 @@
             android:textColor="#000000"
             android:textSize="20sp" />
 
-        <ImageView
-            android:id="@+id/imageView6"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview_generation_quiz"
             android:layout_width="305dp"
-            android:layout_height="130dp"
+            android:layout_height="150dp"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/generation_quiz" />
+            android:elevation="6dp"
+            app:cardCornerRadius="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/genquizimg"
+                android:layout_width="305dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center"
+                android:scaleType="fitXY"
+                app:srcCompat="@drawable/generation_quiz" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/playlistText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="18dp"
             android:layout_marginBottom="15dp"
             android:fontFamily="sans-serif-medium"
             android:text="X, Y, Z  추천 플레이리스트"
@@ -87,29 +98,68 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardview_playlistx"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
-                android:src="@drawable/x_playlist" />
+                android:elevation="6dp"
+                app:cardCornerRadius="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
+                <ImageView
+                    android:id="@+id/XplaylistImg"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/x_playlist" />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardview_playlisty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
-                android:src="@drawable/album"
-                app:srcCompat="@drawable/y_playlist" />
+                android:elevation="6dp"
+                app:cardCornerRadius="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/album"
-                app:srcCompat="@drawable/z_playlist" />
+                <ImageView
+                    android:id="@+id/YplaylistImg"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/album"
+                    app:srcCompat="@drawable/y_playlist" />
+            </androidx.cardview.widget.CardView>
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardview_playlistz"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:elevation="6dp"
+                app:cardCornerRadius="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/ZplaylistImg"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/album"
+                    app:srcCompat="@drawable/z_playlist" />
+            </androidx.cardview.widget.CardView>
+
+
         </LinearLayout>
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/bottmoBar"
         android:layout_width="0dp"
         android:layout_height="75dp"
         android:scaleType="fitXY"
@@ -124,10 +174,20 @@
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginBottom="19dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintBottom_toBottomOf="@+id/bottmoBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/chat_btn" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="48dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/album" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
