--- a/Common/app/src/main/res/drawable/radius.xml
+++ b/Common/app/src/main/res/drawable/radius.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" android:padding = "10dp">
-<!--    <solid android:color="@color/lightOrange"></solid>-->
-    <corners
-        android:bottomLeftRadius="22dp"
-        android:bottomRightRadius="22dp"
-        android:topLeftRadius="22dp"
-        android:topRightRadius="22dp"></corners>
-    <stroke android:width="2dp"
-        android:color="@color/lightOrange"></stroke>
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <corners android:radius="50dp"></corners>
+            <solid android:color="@color/lightOrange"></solid>
+        </shape>
+    </item>
+</selector>
