--- a/Common/app/src/main/res/layout/activity_quiz.xml
+++ b/Common/app/src/main/res/layout/activity_quiz.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Quiz">
@@ -13,7 +14,7 @@
         android:layout_marginTop="50dp"
         android:background="#F8A978"
         android:gravity="center"
-        android:text="문제1"
+        android:text="문제"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -36,7 +37,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="15dp"
         android:orientation="vertical"
         android:paddingHorizontal="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,10 +49,9 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="10dp"
-            android:background="#DBDBDB"
-            android:backgroundTint="#ADEBEBEB"
+            android:background="#ADEBEBEB"
             android:gravity="center"
-            android:text="정답 1"
+            android:text="괴물"
             android:textSize="18sp" />
 
         <TextView
@@ -59,10 +59,9 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="10dp"
-            android:background="#DBDBDB"
-            android:backgroundTint="#ADEBEBEB"
+            android:background="#ADEBEBEB"
             android:gravity="center"
-            android:text="정답 2"
+            android:text="터미네이터"
             android:textSize="18sp" />
 
         <TextView
@@ -70,11 +69,35 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="10dp"
-            android:background="#DBDBDB"
-            android:backgroundTint="#ADEBEBEB"
+            android:background="#ADEBEBEB"
+
             android:gravity="center"
-            android:text="정답 3"
+            android:text="도둑들"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/btn_submit"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:background="@color/lightOrange"
+            android:gravity="center"
+            android:text="다음"
             android:textSize="18sp" />
     </LinearLayout>
+
+
+
+    <ImageView
+        android:id="@+id/quiz_img"
+        android:layout_width="230dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:srcCompat="@drawable/quiz1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
