플레이리스트 세대별

--- a/Common/app/src/main/res/layout/activity_playlist.xml
+++ b/Common/app/src/main/res/layout/activity_playlist.xml
@@ -9,6 +9,7 @@
     tools:context=".Playlist">
 
     <TextView
+        android:id="@+id/generation_check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="2dp"
