--- a/Common/app/src/main/res/layout/activity_main.xml
+++ b/Common/app/src/main/res/layout/activity_main.xml
@@ -188,6 +188,6 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/album" />
+        app:srcCompat="@drawable/user" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
